--- a/assets/css/templatemo-training-studio.css
+++ b/assets/css/templatemo-training-studio.css
@@ -847,7 +847,7 @@ section .section-title {
     color:#130000;
 }
 #footer a {
-    color: #ff0000;
+    color: #ffffff;
     text-decoration: none !important;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
